# chatbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECT_STRUCTURE.md  README.md  allfileshas.txt  app.py  conversation_log.json  debug_factsheet_retrieval.py  debug_final_prompt.py  download_vector_store.py  evaluate_extraction.py  main.py  main_backup.py  pipeline.py  populate_new_vector_store.py  populate_vector_store.py  pyproject.toml  requirements-prod.txt  requirements.txt  reset_and_populate.py  robust_extraction.py  test.py  test_chatbot.py  test_clarification.py  test_queries.md  test_vector_store.py
api/: app.py
chatbot/: enhanced_chatbot.py  enhanced_rag_chatbot.py  knowledge_graph.py  rag_chatbot.py  real_time_data.py  response_quality.py  web_search.py
config/: pipeline.yaml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  DEPLOYMENT.md
evaluation/: base.py  registry.py
extraction/: base.py  registry.py
ingestion/: pdf_processor.py  pdf_table_extractor.py  vector_store.py
k8s/: deployment.yaml  docker-compose.yml  ui-deployment.yaml
requirements/: .dockerignore  .env.example  Makefile  README.md  base.txt  development.txt  production.txt  requirements.txt
retrieval/: base.py  registry.py
scripts/: clean_fund_data.py  ingest_comprehensive_data.py  ingest_top_funds.py  ingest_top_funds_to_vectorstore.py  mutual-fund-updater.service  scrape_indian_funds.py  selenium_scrape_funds.py  setup_cron.sh  setup_database.py  simple_db_setup.py
src/: main.py
src/api/: main.py
src/api/models/: schemas.py
src/api/routes/: chat.py  health.py
src/core/: config.py  exceptions.py  logging.py
src/services/chatbot/: comprehensive_finance_chatbot.py  database_powered_chatbot.py  enhanced_chatbot.py
src/services/data/: analytics.py  daily_updater.py  db_access.py  real_time_data.py  registry.py  retrieval.py  web_search.py
src/services/llm/: generation.py  response_quality.py
src/ui/: streamlit_app.py
src/utils/: helpers.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_enhanced_chatbot.py
